# canonical_sets

./: .flake8  .gitignore  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Grant_Applications_LUCID_V0.ipynb  LICENSE  Makefile  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: testing.yml
canonical_sets/: __init__.py  group.py  inverse_design.py  lucid.py  utils.py
canonical_sets/data/: __init__.py  adult.py  base.py  compas.py
canonical_sets/gan/: __init__.py  lucidgan.py  sampler.py
canonical_sets/illustration/: Illustration_adjustments.ipynb  adultclassifier.pth  train_adult.csv
canonical_sets/illustration (to leave out)/: Illustration_adjustments.ipynb  adultclassifier.pth  adultclassifier.py
canonical_sets/models/: __init__.py  classifiers.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  example_advanced.nblink  example_datasets.nblink  example_gan.nblink  example_pt.nblink  example_tf.nblink  index.rst
docs/source/_autosummary/: canonical_sets.data.adult.Adult.rst  canonical_sets.data.adult.rst  canonical_sets.data.base.BaseData.rst  canonical_sets.data.base.DataSet.rst  canonical_sets.data.base.rst  canonical_sets.data.compas.Compas.rst  canonical_sets.data.compas.rst  canonical_sets.data.rst  canonical_sets.gan.lucidgan.LUCIDGAN.rst  canonical_sets.gan.lucidgan.rst  canonical_sets.gan.rst  canonical_sets.gan.sampler.rst  canonical_sets.group.Metrics.rst  canonical_sets.group.rst  canonical_sets.inverse_design.LUCID.rst  canonical_sets.inverse_design.rst  canonical_sets.lucid.LUCID.rst  canonical_sets.lucid.rst  canonical_sets.models.classifiers.ClassifierPT.rst  canonical_sets.models.classifiers.ClassifierTF.rst  canonical_sets.models.classifiers.rst  canonical_sets.rst  (+3 more)
examples/: example_GAN.ipynb  example_GAN_adult.ipynb  example_GAN_compas.ipynb  example_advanced.ipynb  example_datasets.ipynb  example_pt.ipynb  example_tf.ipynb
examples/illustration/: Illustration_adjustments.ipynb  adultclassifier.py  test_adult.csv
submodules/CTGAN/: setup.cfg  setup.py  tasks.py
tests/: test_adult.py  test_basedata.py  test_compas.py  test_dataset.py  test_gan.py  test_inverse_design.py  test_metrics.py  test_utils.py
(+14 files in other folders)
