[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "canonical_sets"
version = "v0.0.3"
description = "Exposing Algorithmic Bias with Canonical Sets."
license = "MIT"
authors = [
  "Integrated Intelligence Lab",
  "Andres Algaba <andres.algaba@vub.be>",
  "Carmen Mazijn <carmen.mazijn@vub.be>",
  "Vincent Ginis <vincent.ginis@vub.be>"
]
maintainers = [
  "Andres Algaba <andres.algaba@vub.be>",
  "Carmen Mazijn <carmen.mazijn@vub.be>",
  "Vincent Ginis <vincent.ginis@vub.be>"
]
readme = "README.rst"
homepage = "https://data.research.vub.be/"
repository = "https://github.com/Integrated-Intelligence-Lab/canonical_sets"
documentation = ""
keywords = [
  "fairness",
  "bias",
  "inverse design",
  "generative models",
  "interpretability",
  "python"]
packages = [
  { include = "canonical_sets" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = ">=3.5.2"
seaborn = ">=0.12.0"
numpy = ">=1.22.3"
pandas = ">=1.4.2"
torch = ">=1.11.0"
tensorflow = [
  {version = ">=2.9.1, <2.11", markers = "sys_platform != 'darwin'"},
  {version = ">=2.9.1, <2.11", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"}
]
tensorflow-macos = {version = ">=2.9.1, <2.11", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
scikit-learn = ">=1.1.1"
tqdm = ">=4.64.0"
ctgan = ">=0.6.0"
scipy = ">=1.7.3"

[tool.poetry.dev-dependencies]
jupyter = ">=1.0.0"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
mypy = ">=0.942"
isort = ">=5.10.1"
black = ">=22.3.0"
flake8 = ">=4.0.1"
bandit = ">=1.7.4"
Sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.19.2"
nbsphinx = ">=0.8.8"
nbsphinx-link = ">=1.3.0"

[tool.black]
line-length = 79
target-version = ["py39"]
include_trailing_comma = true
extend-exclude = '''
  docs
'''

[tool.isort]
py_version=39
line_length = 79
profile = "black"
extend_skip_glob = ["docs/*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = "docs"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
